# fingertips

./: README.md  pyproject.toml
fingertips/: action_menu.py  common_widgets.py  config.py  core.py  db_utils.py  fingertips.py  hotkey.py  main.py  notification.py  settings.py  utils.py  widget_utils.py  widgets.py  window.py
fingertips/actions/web_search/: __init__.py
fingertips/chat/: chat.html  chat_model.py  main.py  settings_widget.py  widgets.py
fingertips/core/: __init__.py  action.py  plugin.py  thread.py
fingertips/plugins/cmd_plugin/: __init__.py
fingertips/res/: result_item.css  theme.css
fingertips/settings/: ai_action_page.py  config_model.py  main.py  setting_page.py  super_sidebar_page.py
fingertips/sidebar_widgets/: casual_note_card.py  countdown_card.py  digital_clock_card.py  historical_cutting_board_card.py  hitokoto_card.py  pomodoro_card.py  random_decision_card.py  system_info_card.py  todo_card.py
fingertips/sidebar_widgets/hotspot_card/: __init__.py  bilibili_api.py  douyin_api.py  toutiao_api.py  weibo_api.py
fingertips/sidebar_widgets/software_card/: __init__.py  content_widget.py  tab_widget.py  widgets.py
fingertips/super_sidebar/: __init__.py  acrylic_style.py  layout.py  main.py  sidebar_widget_utils.py  software_card.py
