[tool.poetry]
name = "fingertips"
version = "0.1.0"
description = ""
authors = ["LiaoKong <568250549@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PySide2 = {version = "^5.15.2", python = ">=3.6.0,<3.11"}
qtawesome = "^1.3.1"
pywin32 = "^306"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
